# sahih-al-bukhari

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build-browser.mjs  build.mjs  index.browser.js  index.cjs  index.d.ts  index.js  index.node.js  package-lock.json  package.json  pyproject.toml  test.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gradle-publish.yml  maven-publish.yml  npm-publish.yml  pypi-publish.yml  rubygems-publish.yml
chapters/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+58 more)
data/: bukhari.json
data/chapters/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+58 more)
docs/: api.md  cli.md  data-format.md
examples/express/: server.js
examples/flask/: app.py
examples/node-commonjs/: example.js
examples/node-esm/: example.mjs
examples/react/: HadithExample.jsx
java/: .gitignore  PUBLISH.md  README.md  build.gradle  bukhari.ps1  gradle.properties  gradlew  gradlew.bat  pom.xml  settings.gradle  setup-gradle-wrapper.ps1
java/.github/workflows/: gradle-publish.yml  maven-publish.yml
java/docs/: api.md
java/gradle/wrapper/: gradle-wrapper.properties
java/scripts/: copy-data-java.mjs
java/src/main/java/com/bukhari/: Bukhari.java  BukhariCli.java  Chapter.java  Hadith.java  HadithEnglish.java  Metadata.java
java/src/main/resources/: README.txt
java/src/test/java/com/bukhari/: BukhariTest.java
python/sahih_al_bukhari/: __init__.py  bukhari.py  cli.py
ruby/: .gitignore  Gemfile  LICENSE.txt  README.md  Rakefile  debug_path.rb  final_test.rb  sahih-al-bukhari-3.1.2.gem  sahih_al_bukhari.gemspec  sahih_al_bukhari.rb  simple_test.rb  test.rb  test_path.rb
ruby/lib/: sahih_al_bukhari.rb
ruby/lib/sahih_al_bukhari/: bukhari.rb  version.rb
ruby/test/: test_sahih_al_bukhari.rb
sahih_al_bukhari/: __init__.py  bukhari.py
scripts/: build.mjs
src/: index.cjs  index.js  index.node.js
tests/js/: bukhari.test.js
tests/python/: test_bukhari.py
types/: index.d.ts
